--- a/src/app/components/show-form/show-form.component.html
+++ b/src/app/components/show-form/show-form.component.html
@@ -1,3 +1,6 @@
+<div class="container text-center mt-3">
+  <button class="btn btn-primary" (click)="backClicked()">Go-Back</button>
+</div>
 <div class="paper">
   <div class="lines">
     <div class="text" contenteditable spellcheck="false">
